# eva_prover

eva_proof_server/: .env  old.toml  parse_f2f.ipynb  pyproject.toml
eva_proof_server/eva_proof_server/: __init__.py  autoformalize.py  autoprove.py  interface.py  lean_repl.py  reprover.py  server.py
eva_proof_server/evadb_data/: evadb.db
eva_proof_server/evadb_data/index/: FAISS_informal_statement_index.index
proto/: package-lock.json  package.json  vite.config.js
proto/src/: app.html  nlitp.code-workspace
proto/src/lib/lexers/: latex.js  lean.js  tactic.js
proto/src/routes/: +page.svelte  Editor.svelte  FormalizationCell.svelte  MathCell.svelte  Node.svelte  ProofSteps.svelte  TacticEditor.svelte
proto/static/: global.css
